Round account pending balances to 12 decimals

--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -60,7 +60,7 @@
             <h5>Pending balance</h5>
           </div>
           <div class="card-body text-align-center">
-            <span>{{accountService.account.pending}} {{poolConfig.coin}}</span>
+            <span>{{accountService.account.pendingRounded}} {{poolConfig.coin}}</span>
           </div>
         </div>
       </div>
