Add missing snippets

--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -16,8 +16,8 @@
       </span>
     </th>
     <th scope="col">
-      <span ngbTooltip="{{snippetService.getSnippet('top-accounts-component.headers.ec.help-text')}}">
-        {{snippetService.getSnippet('top-accounts-component.headers.ec')}}
+      <span ngbTooltip="{{snippetService.getSnippet('general.ec')}}">
+        EC
       </span>
     </th>
   </tr>
