--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -72,7 +72,7 @@
         </a>
       </li>
     </ul>
-    <button *ngIf="accountService.havePoolPublicKey" class="btn btn-secondary" style="margin-right: 0.5rem;" (click)="accountService.logout()">Logout</button>
+    <button *ngIf="accountService.havePoolPublicKey" class="btn btn-secondary" style="margin-right: 0.5rem;" (click)="accountService.logout()">{{snippetService.getSnippet('header-component.button.logout')}}</button>
     <div ngbDropdown class="d-inline-block" *ngIf="otherPools.length > 0">
       <button class="btn btn-outline-primary" id="poolsDropdown" ngbDropdownToggle>
         {{snippetService.getSnippet('header-component.button.other-pools')}}
