--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -1,23 +1,25 @@
 <div class="row">
   <div class="col-12" *ngIf="!accountService.havePoolPublicKey">
     <div class="row justify-content-center">
-      <input type="text" class="form-control" placeholder="Pool Public Key" [(ngModel)]="poolPublicKeyInput" style="width: 32em;margin-right: 0.5rem;">
+      <input type="text" class="form-control" placeholder="{{snippetService.getSnippet('my-farmer-component.pool-pk-input.placeholder')}}" [(ngModel)]="poolPublicKeyInput" style="width: 32em;margin-right: 0.5rem;">
       <button class="btn btn-success" style="margin-left: 0.5rem;" (click)="login()">
         <fa-icon *ngIf="isLoading" [icon]="faCircleNotch" [spin]="true"></fa-icon>
-        <span *ngIf="isLoading"> Logging in</span>
-        <span *ngIf="!isLoading">Login</span>
+        <span *ngIf="isLoading"> {{snippetService.getSnippet('my-farmer-component.login-button.label-logging-in')}}</span>
+        <span *ngIf="!isLoading">{{snippetService.getSnippet('my-farmer-component.login-button.label')}}</span>
       </button>
     </div>
   </div>
-  <div class="col-12" *ngIf="accountService.havePoolPublicKey && !accountService.haveAccount">
-    <span *ngIf="isLoading">spinner</span>
+  <div class="col-12" *ngIf="accountService.havePoolPublicKey && !accountService.haveAccount && isLoading">
+    <div class="row justify-content-center">
+      <app-loading-state></app-loading-state>
+    </div>
   </div>
   <div class="col-12" *ngIf="accountService.havePoolPublicKey && accountService.haveAccount">
     <div class="row">
       <div class="p-1 col-md-12 col-lg-5 col-xxl-8">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Payout Address</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.payout-address-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             {{accountService.account.payoutAddress}}
@@ -27,7 +29,7 @@
       <div class="p-1 col-md-12 col-lg-7 col-xxl-16">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Pool Public Key</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.pool-public-key-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             {{accountService.account.poolPublicKey}}
@@ -37,7 +39,7 @@
       <div class="p-1 col-md-6 col-lg-3 col-xxl-5">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Name</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.name-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             {{accountService.account.name || 'N/A'}}
@@ -47,7 +49,7 @@
       <div class="p-1 col-md-3 col-lg-2 col-xxl-3">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Difficulty</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.difficulty-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             {{accountService.account.difficulty}}
@@ -57,7 +59,7 @@
       <div class="p-1 col-md-3 col-lg-3 col-xxl-4">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Pending balance</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.pending-balance-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             <span>{{accountService.account.pendingRounded}} {{poolConfig.coin}}</span>
@@ -67,7 +69,7 @@
       <div class="p-1 col-md-3 col-lg-2 col-xxl-3">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>EC</h5>
+            <h5 ngbTooltip="{{snippetService.getSnippet('general.ec')}}">EC</h5>
           </div>
           <div class="card-body text-align-center">
             {{getFormattedCapacity(accountService.account.ec)}}
@@ -77,7 +79,7 @@
       <div class="p-1 col-md-3 col-lg-2 col-xxl-3">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>DR</h5>
+            <h5 ngbTooltip="{{snippetService.getSnippet('general.distribution-ratio')}}">DR</h5>
           </div>
           <div class="card-body text-align-center">
             {{accountService.account.distributionRatio}}
@@ -87,7 +89,7 @@
       <div class="p-1 col-md-6 col-lg-3 col-xxl-4">
         <div class="card">
           <div class="card-header text-align-center">
-            <h5>Last Partial accepted</h5>
+            <h5>{{snippetService.getSnippet('my-farmer-component.last-partial-accepted-card.title')}}</h5>
           </div>
           <div class="card-body text-align-center">
             {{getLastAcceptedPartialAtDuration(accountService.account.lastAcceptedPartialAt)}}
