--- a/src/app/top-accounts/top-accounts.component.html
+++ b/src/app/top-accounts/top-accounts.component.html
@@ -37,7 +37,7 @@
     <td class="ellipsis">{{account.name ? account.name : account.payoutAddress}}</td>
     <td>{{account.distributionRatio}}</td>
     <td>{{account.pendingRounded}} {{poolConfig.coin}}</td>
-    <td>{{getFormattedCapacity(account.ec)}}</td>
+    <td>{{getFormattedCapacity(account.ec)}} <small>({{getEcShare(account)}} %)</small></td>
   </tr>
   </tbody>
 </table>
