--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -3,13 +3,13 @@
     <div class="row justify-content-center">
       <input type="text" class="form-control" placeholder="{{snippetService.getSnippet('my-farmer-component.pool-pk-input.placeholder')}}" [(ngModel)]="poolPublicKeyInput" style="width: 32em;margin-right: 0.5rem;">
       <button class="btn btn-success" style="margin-left: 0.5rem;" (click)="login()">
-        <fa-icon *ngIf="isLoading" [icon]="faCircleNotch" [spin]="true"></fa-icon>
-        <span *ngIf="isLoading"> {{snippetService.getSnippet('my-farmer-component.login-button.label-logging-in')}}</span>
-        <span *ngIf="!isLoading">{{snippetService.getSnippet('my-farmer-component.login-button.label')}}</span>
+        <fa-icon *ngIf="accountService.isLoading" [icon]="faCircleNotch" [spin]="true"></fa-icon>
+        <span *ngIf="accountService.isLoading"> {{snippetService.getSnippet('my-farmer-component.login-button.label-logging-in')}}</span>
+        <span *ngIf="!accountService.isLoading">{{snippetService.getSnippet('my-farmer-component.login-button.label')}}</span>
       </button>
     </div>
   </div>
-  <div class="col-12" *ngIf="accountService.havePoolPublicKey && !accountService.haveAccount && isLoading">
+  <div class="col-12" *ngIf="accountService.havePoolPublicKey && !accountService.haveAccount && accountService.isLoading">
     <div class="row justify-content-center">
       <app-loading-state></app-loading-state>
     </div>
