--- a/src/app/stats-card/stats-card.component.html
+++ b/src/app/stats-card/stats-card.component.html
@@ -30,7 +30,7 @@
       </div>
       <div class="card-body">
             <span class="card-text">
-              {{poolStats.accountsWithShares}} | {{getFormattedCapacityFromGiB(poolStats.ecSum || 0)}}
+              {{accountStats.accountsWithShares}} | {{getFormattedCapacityFromGiB(accountStats.ecSum || 0)}}
             </span>
       </div>
     </div>
