--- a/src/app/stats-card/stats-card.component.html
+++ b/src/app/stats-card/stats-card.component.html
@@ -42,8 +42,8 @@
       </div>
       <div class="card-body" style="margin-top: -14px; margin-bottom: -10px">
             <span class="card-text">
-              {{poolBalance}} {{poolConfig.coin}}<br>
-              {{snippetService.getSnippet('stats-card-component.balance-card.daily-reward')}}: <span placement="bottom" ngbTooltip="{{dailyRewardPerPiBFiat.toFixed(2)}} USD / PiB">{{dailyRewardPerPiB}} {{poolConfig.coin}} / PiB</span>
+              {{poolBalance}} {{poolConfig.ticker}}<br>
+              {{snippetService.getSnippet('stats-card-component.balance-card.daily-reward')}}: <span placement="bottom" ngbTooltip="{{dailyRewardPerPiBFiat.toFixed(2)}} USD / PiB">{{dailyRewardPerPiB}} {{poolConfig.ticker}} / PiB</span>
             </span>
       </div>
     </div>
