--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -44,7 +44,7 @@
     <td *ngIf="!poolConfig.blockExplorerBlockUrlTemplate">{{block.height}}</td>
     <td>{{block.networkSpaceInTib ? getFormattedCapacityFromTiB(block.networkSpaceInTib) : snippetService.getSnippet('general.not-available.short')}}</td>
     <td>{{block.distributionRatio}}</td>
-    <td class="ellipsis">{{block.winner.name || block.winner.payoutAddress}}</td>
+    <td class="ellipsis">{{block.winner.name || block.winner.payoutAddress || snippetService.getSnippet('general.unknown')}}</td>
     <td>{{block.reward}} {{poolConfig.ticker}}</td>
     <td [style.padding-top]="block.distributed ? '12px' : '2px'" [style.padding-bottom]="block.distributed ? '12px' : '8px'">
       {{block.distributed ? snippetService.getSnippet('blocks-won-component.distributed') : snippetService.getSnippet('blocks-won-component.pending')}}
