--- a/src/app/my-farmer/my-farmer.component.html
+++ b/src/app/my-farmer/my-farmer.component.html
@@ -139,8 +139,8 @@
                 <h5>{{snippetService.getSnippet('my-farmer-component.manage-account-card.title')}}</h5>
               </div>
               <div class="card-body">
-                <div class="row justify-content-center">
-                  <button *ngIf="!accountService.haveAuthToken" class="btn btn-success" (click)="authenticate()">{{snippetService.getSnippet('my-farmer-component.manage-account-card.authenticate')}}</button>
+                <div class="row justify-content-center" *ngIf="!accountService.haveAuthToken" >
+                  <button class="btn btn-success" (click)="authenticate()">{{snippetService.getSnippet('my-farmer-component.manage-account-card.authenticate')}}</button>
                   &nbsp;&nbsp;<fa-icon style="font-size: 1.5rem" [icon]="faInfoCircle" placement="bottom" [ngbTooltip]="snippetService.getSnippet('my-farmer-component.manage-account-card.auth-info')"></fa-icon>
                 </div>
                 <div class="text-align-center" *ngIf="accountService.haveAuthToken">
