Update docs link to PoSt

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -16,7 +16,7 @@
           <hr>
         </div>
         <div style="justify-content: space-evenly">
-          <a href="https://docs.foxypool.io/foxy-pool/" target="_blank" class="link highlight">
+          <a href="https://docs.foxypool.io/proof-of-spacetime/foxy-pool/home/" target="_blank" class="link highlight">
             Documentation
           </a>
           <br>
@@ -45,10 +45,6 @@
             <br>
             <a href="https://plot-plan.chia.foxypool.io" target="_blank" class="link highlight">
               Chia Plot Plan
-            </a>
-            <br>
-            <a href="https://poolspy.cf" target="_blank" class="link highlight">
-              Poolspy
             </a>
           </div>
         </div>
