--- a/src/app/blocks-won/blocks-won.component.html
+++ b/src/app/blocks-won/blocks-won.component.html
@@ -38,7 +38,7 @@
         <app-empty-state [text]="snippetService.getSnippet('blocks-won-component.no-blocks-won-yet')" [icon]="faCubes"></app-empty-state>
       </td>
     </tr>
-  <tr *ngFor="let block of blocksWonLastDay; trackBy: trackBy">
+  <tr *ngFor="let block of blocksWonLastDay | slice: (page - 1) * pageSize : page * pageSize; trackBy: trackBy">
     <td>{{getBlockDate(block)}}</td>
     <td *ngIf="poolConfig.blockExplorerBlockUrlTemplate"><a href="{{getBlockExplorerBlockLink(block)}}" target="_blank" style="color: #b45bff">{{block.height}}</a></td>
     <td *ngIf="!poolConfig.blockExplorerBlockUrlTemplate">{{block.height}}</td>
@@ -54,3 +54,13 @@
   </tr>
   </tbody>
 </table>
+<ngb-pagination
+  *ngIf="!limit && blocksWonLastDay.length > pageSize"
+  class="d-flex justify-content-center"
+  [(page)]="page"
+  [pageSize]="pageSize"
+  [collectionSize]="blocksWonLastDay.length"
+  [maxSize]="5"
+  [rotate]="true"
+  [boundaryLinks]="true">
+</ngb-pagination>
